--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,22 +1,22 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.activeBackground": "#842dd9",
-        "activityBar.background": "#842dd9",
+        "activityBar.activeBackground": "#403bcd",
+        "activityBar.background": "#403bcd",
         "activityBar.foreground": "#e7e7e7",
         "activityBar.inactiveForeground": "#e7e7e799",
-        "activityBarBadge.background": "#d88127",
-        "activityBarBadge.foreground": "#15202b",
+        "activityBarBadge.background": "#330e0d",
+        "activityBarBadge.foreground": "#e7e7e7",
         "commandCenter.border": "#e7e7e799",
-        "sash.hoverBorder": "#842dd9",
-        "statusBar.background": "#6a20b3",
+        "sash.hoverBorder": "#403bcd",
+        "statusBar.background": "#302baa",
         "statusBar.foreground": "#e7e7e7",
-        "statusBarItem.hoverBackground": "#842dd9",
-        "statusBarItem.remoteBackground": "#6a20b3",
+        "statusBarItem.hoverBackground": "#403bcd",
+        "statusBarItem.remoteBackground": "#302baa",
         "statusBarItem.remoteForeground": "#e7e7e7",
-        "titleBar.activeBackground": "#6a20b3",
+        "titleBar.activeBackground": "#302baa",
         "titleBar.activeForeground": "#e7e7e7",
-        "titleBar.inactiveBackground": "#6a20b399",
+        "titleBar.inactiveBackground": "#302baa99",
         "titleBar.inactiveForeground": "#e7e7e799"
     },
-    "peacock.color": "#6a20b3"
+    "peacock.color": "#302baa"
 }
