--- a/server/package.json
+++ b/server/package.json
@@ -8,12 +8,13 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "test": "cross-env NODE_ENV=test NODE_OPTIONS=--experimental-vm-modules jest --runInBand --detectOpenHandles --forceExit",
-    "test:watch": "cross-env NODE_ENV=test NODE_OPTIONS=--experimental-vm-modules jest --watch --runInBand"
+    "test:watch": "cross-env NODE_ENV=test NODE_OPTIONS=--experimental-vm-modules jest --watch --runInBand",
+    "seed": "node --experimental-vm-modules ./seeders/seed.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "packageManager": "pnpm@10.10.0",
+  "packageManager": "pnpm@10.11.1",
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "chalk": "^5.4.1",
