--- a/server/package.json
+++ b/server/package.json
@@ -14,8 +14,9 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "packageManager": "pnpm@10.11.1",
+  "packageManager": "pnpm@10.12.1",
   "dependencies": {
+    "multer": "^2.0.1",
     "bcryptjs": "^3.0.2",
     "chalk": "^5.4.1",
     "cookie-parser": "^1.4.7",
@@ -27,14 +28,14 @@
     "mongoose": "^8.15.0",
     "morgan": "^1.10.0",
     "node-fetch": "^3.3.2",
-    "openai": "^4.100.0",
+    "openai": "^5.2.0",
     "socket.io": "^4.8.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
-    "jest": "^29.7.0",
+    "jest": "^30.0.0",
     "mongodb-memory-server": "^10.1.4",
     "nodemon": "^3.1.10",
     "socket.io-client": "^4.8.1",
